# LatticeLens

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  README.md  alembic.ini  docker-compose.yml  latticelens-phase1-implementation-brief.md  mcp_instructions.md  phase1-implementation-brief.md  phase2-implementation-brief.md  phase3-implementation-brief.md  phase4-implementation-brief.md  phase5-implementation-brief.md  phase6-implementation-brief.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: audit-governance.sh  compliance-check.sh
.claude/skills/lattice/: SKILL.md
.github/workflows/: ci.yml  publish.yml
.lattice/: .gitignore  config.yaml  tags.yaml  types.yaml
.lattice/facts/: ADR-01.yaml  ADR-02.yaml  ADR-03.yaml  ADR-04.yaml  ADR-05.yaml  ADR-06.yaml  ADR-07.yaml  ADR-08.yaml  ADR-09.yaml  ADR-10.yaml  ADR-11.yaml  ADR-12.yaml  ADR-13.yaml  ADR-14.yaml  ADR-15.yaml  ADR-16.yaml  ADR-17.yaml  ADR-18.yaml  ADR-19.yaml  API-01.yaml  API-02.yaml  API-03.yaml  AUP-01.yaml  AUP-02.yaml  AUP-03.yaml  AUP-04.yaml  AUP-05.yaml  AUP-06.yaml  AUP-07.yaml  AUP-08.yaml  DES-01.yaml  DES-02.yaml  DES-03.yaml  DES-04.yaml  DES-05.yaml  DES-06.yaml  DES-07.yaml  DES-08.yaml  DES-09.yaml  DES-10.yaml  (+53 more)
.lattice/history/: changelog.jsonl
.lattice/roles/: architecture.yaml  deploy.yaml  implementation.yaml  planning.yaml  qa.yaml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
dogfood/: ADR-01.yaml  ADR-02.yaml  ADR-03.yaml  ADR-04.yaml  API-01.yaml  AUP-01.yaml  DES-01.yaml  DES-02.yaml  DG-01.yaml  MC-01.yaml  MON-01.yaml  PRD-01.yaml  RISK-01.yaml  RISK-02.yaml  RUN-01.yaml  SP-01.yaml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  hooks.ts
frontend/src/hooks/: useSSE.ts  useTheme.ts
frontend/src/styles/: globals.css
frontend/src/types/: fact.ts  graph.ts
frontend/src/utils/: colors.ts
seed/: example_facts.json  example_facts.yaml
src/lattice_lens/: __init__.py  config.py  lens.py  models.py
src/lattice_lens/cli/: backend_command.py  check_command.py  context_commands.py  evaluate_command.py  exchange_commands.py  extract_command.py  fact_commands.py  git_commands.py  graph_commands.py  helpers.py  init_command.py  lens_commands.py  main.py  reconcile_command.py  seed_command.py  serve_command.py  status_command.py  tags_command.py  types_command.py  upgrade_command.py  validate_command.py  view_command.py
src/lattice_lens/mcp/: __init__.py  server.py  tools.py
src/lattice_lens/services/: __init__.py  check_service.py  code_scanner.py  context_service.py  edge_inference.py  evaluate_service.py  exchange_service.py  extract_service.py  fact_service.py  graph_service.py  project_service.py  reconcile_service.py  tag_service.py  type_service.py  validate_service.py
src/lattice_lens/store/: __init__.py  index.py  lens_store.py  protocol.py  sqlite_store.py  yaml_store.py
src/lattice_lens/web/: __init__.py  app.py  sse.py
src/latticelens/: __init__.py  db.py  main.py  models.py  schemas.py  settings.py
src/latticelens/cli/: main.py
src/latticelens/config/: agent_roles.yaml
src/latticelens/prompts/: extract.txt
src/latticelens/routers/: extract.py  facts.py  graph.py  health.py
src/latticelens_mcp/: __init__.py  __main__.py  auto_code.py  client.py  config.py  formatting.py  server.py
tests/: conftest.py  test_backend_cli.py  test_check.py  test_cli.py  test_code_scanner.py  test_context_cli.py  test_context_service.py  test_edge_inference.py  test_evaluate_cli.py  test_evaluate_service.py  test_exchange.py  test_exchange_cli.py  test_extract_cli.py  test_extract_service.py  test_extraction.py  test_fact_commands_cli.py  test_fact_service.py  test_facts_crud.py  test_facts_query.py  test_git_commands.py  test_graph.py  test_graph_cli.py  test_graph_service.py  test_index.py  test_lens.py  test_lens_commands.py  test_lens_integration.py  test_lens_store.py  test_mcp_server.py  test_mcp_tools.py  test_models.py  test_project_scoping.py  test_project_service.py  test_promote.py  test_reconcile_cli.py  test_reconcile_service.py  test_serve_cli.py  test_sqlite_store.py  test_tag_service.py  test_tags_cli.py  (+7 more)
tests/fixtures/: sample_doc.md
tests/test_mcp/: conftest.py  test_auto_code.py  test_client.py  test_tools.py
(+21 files in other folders)
