[project]
name = "lattice-lens"
version = "0.1.0"
description = "Knowledge governance layer for AI agent systems"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "ruamel.yaml>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
extract = [
    "anthropic>=0.25.0",
]
mcp = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
lattice = "lattice_lens.cli.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external API access (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 100
