[project]
name = "lattice-lens"
version = "1.0.0"
description = "Knowledge governance layer for AI agent systems"
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name = "HVallad"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "ruamel.yaml>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/HVallad/LatticeLens"
Repository = "https://github.com/HVallad/LatticeLens"
Changelog = "https://github.com/HVallad/LatticeLens/blob/main/CHANGELOG.md"
Issues = "https://github.com/HVallad/LatticeLens/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.3.0",
    "build>=1.0.0",
]
extract = [
    "anthropic>=0.25.0",
]
mcp = [
    "mcp[cli]>=1.2.0",
]
viewer = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
lattice = "lattice_lens.cli.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lattice_lens.web" = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external API access (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["lattice_lens"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]

[tool.ruff]
target-version = "py311"
line-length = 100
